<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.strigoy.myapplication.com.mobile.strigoy.myapplication.MainActivity">

    <!--android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"-->

    <com.mobile.strigoy.myapplication.GifView
        android:id="@+id/myGifImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/main_title"
        android:alpha="0.7"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="60dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:alpha="0.5"
        android:onClick="mode0"
        android:text="@string/b_bezier" />

    <Button
        android:text="@string/b_hermite"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:alpha="0.5"
        android:onClick="mode3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:alpha="0.5"
        android:onClick="mode1"
        android:layout_marginLeft="20dp"
        android:text="@string/b_catmullrom" />

    <Button
        android:id="@+id/button4"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:alpha="0.5"
        android:onClick="mode2"
        android:layout_marginLeft="20dp"
        android:text="@string/b_lagrange" />

    <Button
        android:id="@+id/button6"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:onClick="mode4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/b_mirr" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:fontFamily="casual"
        android:text="@string/powered"
        android:textSize="18dp" />


</FrameLayout>
