<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mainh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.strigoy.myapplication.com.mobile.strigoy.myapplication.MainActivity">

    <!--android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"-->

    <com.mobile.strigoy.myapplication.GifView
        android:id="@+id/myGifImageh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textViewh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:text="@string/main_title"
        android:alpha="0.7"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="70dp" />

    <Button
        android:id="@+id/buttonh"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:alpha="0.5"
        android:onClick="mode0"
        android:text="@string/b_bezier" />

    <Button
        android:text="@string/b_hermite"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2h"
        android:alpha="0.5"
        android:onClick="mode3"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/buttonh"
        android:layout_alignStart="@+id/buttonh" />

    <!--
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="20dp"
    -->

    <Button
        android:id="@+id/button3h"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:onClick="mode1"
        android:text="@string/b_catmullrom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        />

    <Button
        android:id="@+id/button4h"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:onClick="mode2"
        android:text="@string/b_lagrange"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        />

    <Button
        android:id="@+id/button6h"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:onClick="mode4"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/b_mirr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|right"
        android:fontFamily="casual"
        android:text="@string/powered"
        android:textSize="20dp" />

</RelativeLayout>
