<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.mobile.strigoy.myapplication.ControlActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

    <!--DrawView
        android:id="@+id/myDrawView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/-->

    <ToggleButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:onClick="setEdit"
        android:textOff="@string/b_edit"
        android:textOn="@string/b_edit"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/lineButton" />

    <ToggleButton
        android:id="@+id/animButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:textOff="@string/b_animation"
        android:textOn="@string/b_animation"
        android:onClick="setAnimation"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/styleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:text="@string/b_style"
        android:onClick="setStyle"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/animButton" />

    <ToggleButton
        android:id="@+id/lineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/styleButton"
        android:alpha="0.4"
        android:checked="true"
        android:onClick="setLine"
        android:textOff="@string/b_line"
        android:textOn="@string/b_line" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.4"
        android:onClick="setClear"
        android:text="@string/b_clear" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:alpha="0.4"
        android:onClick="setChange"
        android:text="Change" />

    <!--TextView
        android:id="@+id/nameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="cursive"
        android:text="@string/powered"
        android:textSize="15dp"
        android:textColor="@android:color/holo_green_dark"
        -->


    <!--TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textColor="@android:color/holo_green_dark"
        android:text="0"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
       -->
</RelativeLayout>
